[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspaceapi"
version = "0.1.0"
dependencies = [
    "requests>=2.32.5"
]
authors = [
    {name = "Kat (Py-Kat)"}
]
description = "A Python API Wrapper for multiple space data related APIs!"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE.txt"]
keywords = ["space", "api", "multi-api", "wrapper", "data"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/Py-Kat/py-space-api"