[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspaceapi"
version = "0.3.0"
dependencies = ["requests ~= 2.32"]
authors = [
    {name = "Kat (Py-Kat)", email = "imhelvetika@gmail.com"}
]
description = "A Python API Wrapper for retrieving astronomical data from multiple APIs! (e.g. NASA & SpaceX APIs)"
readme = {file = "README.md", content-type = "text/markdown"}
license-files = ["LICENSE.txt"]
keywords = ["space", "api", "multi-api", "wrapper", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
repository = "https://github.com/Py-Kat/py-space-api"
